# web-api-in-rust-by-yatto

./: .env  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  setup.sh
migrations/: 20250425021027_create_tasks.down.sql  20250425021027_create_tasks.up.sql
src/: app.rs  error.rs  logger.rs  main.rs
src/docs/: api_doc.rs
src/infrastructure/: db.rs  mod.rs  task_repository.rs
src/infrastructure/tests/: mod.rs  task_repository_tests.rs
src/models/: task.rs  user.rs
src/models/tests/: mod.rs  task_tests.rs
src/repositories/: mod.rs  task_repository.rs
src/repositories/tests/: task_repository_tests.rs
src/routes/: hello.rs  tasks.rs  users.rs
src/usecase/: mod.rs  task_usecase.rs
src/usecase/tests/: mod.rs  task_usecase_tests.rs
