[package]
name = "rust-on-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
# anyhow = "1.0.75"
# axum = { version = "0.7.5", features = ["macros"] }
# sqlx = { version = "0.7.3", features = [
#   "chrono",
#   "macros",
#   "migrate",
#   "postgres",
#   "runtime-tokio",
#   "uuid",
# ] }
# tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "rust-on-docker"
path = "src/main.rs"

[dev-dependencies]
# rstest = "0.18.2"
