[package]
name = "rust-on-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "macros",
  "migrate",
  "postgres",
  "uuid",
  "chrono"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15" # 環境変数管理
tower-http = { version = "0.6.2", features = ["trace"] }
async-trait = "0.1"
tracing = "0.1" # ログ出力
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0" # 独自エラー定義用（オプション）
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18.0"
mockall = "0.13.1"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"


[[bin]]
name = "rust-on-docker"
path = "src/main.rs"
